--- a/requirements.txt
+++ b/requirements.txt
@@ -6,3 +6,4 @@ adafruit-circuitpython-gps
 adafruit-circuitpython-lsm303-accel
 adafruit-circuitpython-lsm303dlh-mag 
 adafruit-circuitpython-tsl2591
+adafruit-circuitpython-sht31d
